--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -8,16 +8,8 @@ concurrency:
 
 jobs:
   build:
-    name: ${{ matrix.os }}-${{ github.workflow }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: windows-latest
     timeout-minutes: 10
-
-    env:
-      ADDITIONAL_ARGS: ${{ matrix.os == 'ubuntu-latest' && '-DENABLE_CODE_COVERAGE=ON' || '' }}
 
     steps:
       - name: Checkout
@@ -34,19 +26,11 @@ jobs:
           vcpkgDirectory: "${{ github.workspace }}/external/vcpkg"
           vcpkgJsonGlob: "${{ github.workspace }}/vcpkg.json"
 
-      - if: ${{ matrix.os == 'ubuntu-latest' }}
-        name: Install Packages
-        run: sudo apt-get update && sudo apt-get install gcovr lcov
-
       - name: Run CMake
         uses: lukka/run-cmake@v10
         with:
           configurePreset: "ninja-multi-vcpkg"
-          configurePresetAdditionalArgs: '[`-DENABLE_TESTING=ON`, `${{ env.ADDITIONAL_ARGS }}`]'
-          buildPreset: "ninja-multi-vcpkg-debug"
-          buildPresetAdditionalArgs: '[`--target unit_tests`, ` -j4`]'
-          testPreset: "ninja-multi-vcpkg-debug"
-
-      - if: ${{ matrix.os == 'ubuntu-latest' }}
-        name: Code Coverage
-        run: bash <(curl -s https://codecov.io/bash)
+          configurePresetAdditionalArgs: '[`-DENABLE_TESTING=ON`]'
+          buildPreset: "ninja-multi-vcpkg-release"
+          buildPresetAdditionalArgs: '[`--target unit_tests`, `-j4`]'
+          testPreset: "ninja-multi-vcpkg-release"
