--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,13 @@
-cmake_minimum_required(VERSION 3.16...3.27 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.21...3.27 FATAL_ERROR)
 
 #==========  Project Details  ==================================================#
 
 project(${CMAKE_PROJECT_NAME}Tests LANGUAGES CXX C)
+
+#==========  Configure Files  ==================================================#
+
+# Move the ini file so that it is relative to the executable
+file(COPY "../cfg/Settings.ini" DESTINATION "${CMAKE_BINARY_DIR}/test")
 
 #========== Add Unit Test(s) ==================================================#
 
@@ -12,14 +17,18 @@ if(USE_GOOGLE_MOCK)
     set(GOOGLE_MOCK_LIBRARIES GTest::gmock_main)
 endif()
 
-set(TEST_LIBRARIES GTest::gtest_main # `gtest_main` forgoes the need for a unit test with a `main()` function and to then include each test file within that unit test.
-                   ${GOOGLE_MOCK_LIBRARIES} TESTING_LIBRARY
-)
+set(TEST_LIBRARIES GTest::gtest_main ${GOOGLE_MOCK_LIBRARIES} TESTING_LIBRARY)
 
 foreach(TEST_FILE ${TEST_FILES})
     string(REGEX REPLACE "(.*/)([a-zA-Z0-9_ ]+)(\.cpp)" "\\2" TEST_NAME ${TEST_FILE})
 
-    add_executable(${TEST_NAME} ${TEST_FILE})
+    if(${TEST_NAME} STREQUAL "CMyWindow")
+        add_executable(${TEST_NAME} ${TEST_FILE} "../res/resource.rc")
+
+        target_compile_definitions(${TEST_NAME} PRIVATE _AFXDLL __TEST)
+    else()
+        add_executable(${TEST_NAME} ${TEST_FILE})
+    endif()
 
     message(STATUS "Created ${TEST_NAME} binary")
 
