--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,10 +2,6 @@ name: Continuous Integration
 
 on: [push, workflow_dispatch]
 
-concurrency:
-  group: continuous-integration
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: windows-latest
@@ -16,6 +12,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      - name: Set up Windows Includes Paths
+        run: |
+          # Set environment variables for Windows headers needed by Clang
+          echo "WindowsIncludes=C:/Program Files (x86)/Windows Kits/10/Include/10.0.20348.0" >> $GITHUB_ENV
 
       - name: Get CMake
         uses: lukka/get-cmake@latest
@@ -30,7 +31,7 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           configurePreset: "ninja-multi-vcpkg"
-          configurePresetAdditionalArgs: '[`-DENABLE_TESTING=ON`]'
-          buildPreset: "ninja-multi-vcpkg-release"
-          buildPresetAdditionalArgs: '[`--target unit_tests`, `-j4`]'
-          testPreset: "ninja-multi-vcpkg-release"
+          configurePresetAdditionalArgs: '[`-DENABLE_TESTING=ON`, `-ENABLE_CODE_COVERAGE=ON`]'
+          buildPreset: "ninja-multi-vcpkg-debug"
+          buildPresetAdditionalArgs: '[`--target unit_tests`]'
+          testPreset: "ninja-multi-vcpkg-debug"
