--- a/tools/__Setup/packages.config
+++ b/tools/__Setup/packages.config
@@ -6,7 +6,7 @@
   <package id="doxygen.install" />
   <package id="golang" /> <!--needed to install yamlfmt-->
   <package id="graphviz" />
-  <package id="lcov" />
+  <package id="html-tidy" />
   <package id="llvm" /> <!--clang-tidy executable-->
   <package id="make" />
   <package id="ninja" />
