--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Run CMake
         uses: lukka/run-cmake@v10
         with:
-          configurePreset: "ninja-multi-vcpkg"
+          configurePreset: "ninja-configure"
           configurePresetAdditionalArgs: '[`-DENABLE_TESTING=ON`, `-DENABLE_CODE_COVERAGE=ON`]'
-          buildPreset: "ninja-multi-vcpkg-debug"
+          buildPreset: "ninja-build-debug"
           buildPresetAdditionalArgs: '[`--target unit_tests`]'
-          testPreset: "ninja-multi-vcpkg-debug"
+          testPreset: "ninja-test-debug"
